added some style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div>MyLOGO</div>
     <nav>
-      <ul>
+      <ul class="header-menu">
         <li><a href="#">sample</a></li>
         <li><a href="#">sample</a></li>
         <li><a href="#">sample</a></li>
